Se confirma el codigo correcto de la Entidad Producto